// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ControlPanel /> > renders with default desktop position and size 1`] = `
<div
  class="react-draggable"
  data-testid="control-panel-wrapper"
  id="_r_d_"
  style="position: absolute; user-select: auto; width: auto; height: auto; display: inline-block; top: 0px; left: 0px; cursor: auto; transform: translate(0px,10px); max-width: 9007199254740991px; max-height: 9007199254740991px; box-sizing: border-box; flex-shrink: 0;"
>
  <ul
    class="css-1yp3qi5 etei6x20"
  >
    <li
      class="css-1obf64m e50mx220"
    >
      <button
        aria-label="Play"
        class="e50mx224 css-13xus98 evz7agr0"
        id="_r_d_--play"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 6v12l10-6z"
          />
        </svg>
      </button>
    </li>
    <li
      class="css-1obf64m e50mx220"
    >
      <button
        aria-label="Quit Game"
        class="e50mx224 css-10cxji1 evz7agr0"
        id="_r_d_--quit-game"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 10h6c1.654 0 3 1.346 3 3s-1.346 3-3 3h-3v2h3c2.757 0 5-2.243 5-5s-2.243-5-5-5H9V5L4 9l5 4v-3z"
          />
        </svg>
      </button>
    </li>
    <li
      class="css-1obf64m e50mx220"
    >
      <button
        aria-label="Drag Items"
        class="noDrag e50mx224 css-13geyoh evz7agr0"
        id="_r_d_--drag"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 11h-5V6h3l-4-4-4 4h3v5H6V8l-4 4 4 4v-3h5v5H8l4 4 4-4h-3v-5h5v3l4-4-4-4z"
          />
        </svg>
      </button>
    </li>
    <li
      class="css-1obf64m e50mx220"
    >
      <button
        aria-label="Resize Items"
        class="noDrag e50mx224 css-x2qnrx evz7agr0"
        id="_r_d_--resize"
      >
        <svg
          fill="none"
          height="2em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 11v8a1 1 0 0 0 1 1h8m-9 -14v-1a1 1 0 0 1 1 -1h1m5 0h2m5 0h1a1 1 0 0 1 1 1v1m0 5v2m0 5v1a1 1 0 0 1 -1 1h-1"
          />
          <path
            d="M4 12h7a1 1 0 0 1 1 1v7"
          />
        </svg>
      </button>
    </li>
    <li
      class="css-1obf64m e50mx220"
    >
      <button
        aria-label="Rewind Emulator"
        class="e50mx224 css-1ejdgo3 evz7agr0"
        id="_r_d_--rewind"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          style="max-height: 100%;"
          viewBox="0 0 1024 1024"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M485.6 249.9L198.2 498c-8.3 7.1-8.3 20.8 0 27.9l287.4 248.2c10.7 9.2 26.4.9 26.4-14V263.8c0-14.8-15.7-23.2-26.4-13.9zm320 0L518.2 498a18.6 18.6 0 0 0-6.2 14c0 5.2 2.1 10.4 6.2 14l287.4 248.2c10.7 9.2 26.4.9 26.4-14V263.8c0-14.8-15.7-23.2-26.4-13.9z"
          />
        </svg>
      </button>
    </li>
    <li
      class="css-1obf64m e50mx220"
    >
      <span
        class="css-1obf64m e50mx221"
      >
        <div
          class="css-1rznaag e50mx222"
          id="_r_d_--volume-slider"
        >
          <button
            aria-label="Mute Volume"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-dhaj44-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 24 24"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.707 20.293-2.023-2.023A9.566 9.566 0 0 0 21.999 12c0-4.091-2.472-7.453-5.999-9v2c2.387 1.386 3.999 4.047 3.999 7a8.113 8.113 0 0 1-1.672 4.913l-1.285-1.285C17.644 14.536 18 13.19 18 12c0-1.771-.775-3.9-2-5v7.586l-2-2V4a1 1 0 0 0-1.554-.832L7.727 6.313l-4.02-4.02-1.414 1.414 18 18 1.414-1.414zM12 5.868v4.718L9.169 7.755 12 5.868zM4 17h2.697l5.748 3.832a1.004 1.004 0 0 0 1.027.05A1 1 0 0 0 14 20v-1.879l-2-2v2.011l-4.445-2.964c-.025-.017-.056-.02-.082-.033a.986.986 0 0 0-.382-.116C7.059 15.016 7.032 15 7 15H4V9h.879L3.102 7.223A1.995 1.995 0 0 0 2 9v6c0 1.103.897 2 2 2z"
              />
            </svg>
          </button>
          <span
            class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium e50mx223 css-hva6d7-MuiSlider-root"
          >
            <span
              class="MuiSlider-rail css-r64h58-MuiSlider-rail"
            />
            <span
              class="MuiSlider-track css-xvk2i-MuiSlider-track"
              style="left: 0%; width: 100%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="0"
              style="left: 0%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="1"
              style="left: 10%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="2"
              style="left: 20%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="3"
              style="left: 30.000000000000004%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="4"
              style="left: 40%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="5"
              style="left: 50%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="6"
              style="left: 60.00000000000001%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="7"
              style="left: 70%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="8"
              style="left: 80%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="9"
              style="left: 90%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="10"
              style="left: 100%;"
            />
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1xcmt9q-MuiSlider-thumb"
              data-index="0"
              style="left: 100%;"
            >
              <input
                aria-label="Volume Slider"
                aria-orientation="horizontal"
                aria-valuemax="1"
                aria-valuemin="0"
                aria-valuenow="1"
                data-index="0"
                max="1"
                min="0"
                step="0.1"
                style="border: 0px; clip: rect(0px); height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="1"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel css-1asissc-MuiSlider-valueLabel"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    100
                  </span>
                </span>
              </span>
            </span>
          </span>
          <button
            aria-label="Max Volume"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-dhaj44-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 24 24"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21c3.527-1.547 5.999-4.909 5.999-9S19.527 4.547 16 3v2c2.387 1.386 3.999 4.047 3.999 7S18.387 17.614 16 19v2z"
              />
              <path
                d="M16 7v10c1.225-1.1 2-3.229 2-5s-.775-3.9-2-5zM4 17h2.697l5.748 3.832a1.004 1.004 0 0 0 1.027.05A1 1 0 0 0 14 20V4a1 1 0 0 0-1.554-.832L6.697 7H4c-1.103 0-2 .897-2 2v6c0 1.103.897 2 2 2zm0-8h3c.033 0 .061-.016.093-.019a1.027 1.027 0 0 0 .38-.116c.026-.015.057-.017.082-.033L12 5.868v12.264l-4.445-2.964c-.025-.017-.056-.02-.082-.033a.986.986 0 0 0-.382-.116C7.059 15.016 7.032 15 7 15H4V9z"
              />
            </svg>
          </button>
        </div>
      </span>
    </li>
    <li
      class="css-1obf64m e50mx220"
    >
      <span
        class="css-1obf64m e50mx221"
      >
        <div
          class="css-1jdek9u e50mx222"
          id="_r_d_--fast-forward"
        >
          <button
            aria-label="Regular Speed"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-dhaj44-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 1024 1024"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M825.8 498L538.4 249.9c-10.7-9.2-26.4-.9-26.4 14v496.3c0 14.9 15.7 23.2 26.4 14L825.8 526c8.3-7.2 8.3-20.8 0-28zm-320 0L218.4 249.9c-10.7-9.2-26.4-.9-26.4 14v496.3c0 14.9 15.7 23.2 26.4 14L505.8 526c4.1-3.6 6.2-8.8 6.2-14 0-5.2-2.1-10.4-6.2-14z"
              />
            </svg>
          </button>
          <span
            class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium e50mx223 css-hva6d7-MuiSlider-root"
          >
            <span
              class="MuiSlider-rail css-r64h58-MuiSlider-rail"
            />
            <span
              class="MuiSlider-track css-xvk2i-MuiSlider-track"
              style="left: 0%; width: 0%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="0"
              style="left: 0%;"
            />
            <span
              class="MuiSlider-mark css-lq5hqx-MuiSlider-mark"
              data-index="1"
              style="left: 25%;"
            />
            <span
              class="MuiSlider-mark css-lq5hqx-MuiSlider-mark"
              data-index="2"
              style="left: 50%;"
            />
            <span
              class="MuiSlider-mark css-lq5hqx-MuiSlider-mark"
              data-index="3"
              style="left: 75%;"
            />
            <span
              class="MuiSlider-mark css-lq5hqx-MuiSlider-mark"
              data-index="4"
              style="left: 100%;"
            />
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1xcmt9q-MuiSlider-thumb"
              data-index="0"
              style="left: 0%;"
            >
              <input
                aria-label="Fast Forward Slider"
                aria-orientation="horizontal"
                aria-valuemax="5"
                aria-valuemin="1"
                aria-valuenow="1"
                data-index="0"
                max="5"
                min="1"
                step="1"
                style="border: 0px; clip: rect(0px); height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="1"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel css-1asissc-MuiSlider-valueLabel"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    x1
                  </span>
                </span>
              </span>
            </span>
          </span>
          <button
            aria-label="Max Fast Forward"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-dhaj44-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 1024 1024"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M793.8 499.3L506.4 273.5c-10.7-8.4-26.4-.8-26.4 12.7v451.6c0 13.5 15.7 21.1 26.4 12.7l287.4-225.8a16.14 16.14 0 0 0 0-25.4zm-320 0L186.4 273.5c-10.7-8.4-26.4-.8-26.4 12.7v451.5c0 13.5 15.7 21.1 26.4 12.7l287.4-225.8c4.1-3.2 6.2-8 6.2-12.7 0-4.6-2.1-9.4-6.2-12.6zM857.6 248h-51.2c-3.5 0-6.4 2.7-6.4 6v516c0 3.3 2.9 6 6.4 6h51.2c3.5 0 6.4-2.7 6.4-6V254c0-3.3-2.9-6-6.4-6z"
              />
            </svg>
          </button>
        </div>
      </span>
    </li>
  </ul>
  <div />
</div>
`;

exports[`<ControlPanel /> > renders with default mobile position and size 1`] = `
<div
  class="react-draggable"
  data-testid="control-panel-wrapper"
  id="_r_7_"
  style="position: absolute; user-select: auto; width: 100dvw; height: auto; display: inline-block; top: 0px; left: 0px; cursor: auto; transform: translate(0px,0px); max-width: 9007199254740991px; max-height: 9007199254740991px; box-sizing: border-box; flex-shrink: 0;"
>
  <ul
    class="css-ba9jvp etei6x20"
  >
    <li
      class="css-1obf64m e50mx220"
    >
      <button
        aria-label="Play"
        class="e50mx224 css-13xus98 evz7agr0"
        id="_r_7_--play"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 6v12l10-6z"
          />
        </svg>
      </button>
    </li>
    <li
      class="css-1obf64m e50mx220"
    >
      <button
        aria-label="Quit Game"
        class="e50mx224 css-10cxji1 evz7agr0"
        id="_r_7_--quit-game"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 10h6c1.654 0 3 1.346 3 3s-1.346 3-3 3h-3v2h3c2.757 0 5-2.243 5-5s-2.243-5-5-5H9V5L4 9l5 4v-3z"
          />
        </svg>
      </button>
    </li>
    <li
      class="css-1obf64m e50mx220"
    >
      <button
        aria-label="Drag Items"
        class="noDrag e50mx224 css-13geyoh evz7agr0"
        id="_r_7_--drag"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 11h-5V6h3l-4-4-4 4h3v5H6V8l-4 4 4 4v-3h5v5H8l4 4 4-4h-3v-5h5v3l4-4-4-4z"
          />
        </svg>
      </button>
    </li>
    <li
      class="css-1obf64m e50mx220"
    >
      <button
        aria-label="Resize Items"
        class="noDrag e50mx224 css-x2qnrx evz7agr0"
        id="_r_7_--resize"
      >
        <svg
          fill="none"
          height="2em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 11v8a1 1 0 0 0 1 1h8m-9 -14v-1a1 1 0 0 1 1 -1h1m5 0h2m5 0h1a1 1 0 0 1 1 1v1m0 5v2m0 5v1a1 1 0 0 1 -1 1h-1"
          />
          <path
            d="M4 12h7a1 1 0 0 1 1 1v7"
          />
        </svg>
      </button>
    </li>
    <li
      class="css-1obf64m e50mx220"
    >
      <button
        aria-label="Rewind Emulator"
        class="e50mx224 css-1ejdgo3 evz7agr0"
        id="_r_7_--rewind"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          style="max-height: 100%;"
          viewBox="0 0 1024 1024"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M485.6 249.9L198.2 498c-8.3 7.1-8.3 20.8 0 27.9l287.4 248.2c10.7 9.2 26.4.9 26.4-14V263.8c0-14.8-15.7-23.2-26.4-13.9zm320 0L518.2 498a18.6 18.6 0 0 0-6.2 14c0 5.2 2.1 10.4 6.2 14l287.4 248.2c10.7 9.2 26.4.9 26.4-14V263.8c0-14.8-15.7-23.2-26.4-13.9z"
          />
        </svg>
      </button>
    </li>
    <li
      class="css-1obf64m e50mx220"
    >
      <span
        class="css-1obf64m e50mx221"
      >
        <div
          class="css-1rznaag e50mx222"
          id="_r_7_--volume-slider"
        >
          <button
            aria-label="Mute Volume"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-dhaj44-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 24 24"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.707 20.293-2.023-2.023A9.566 9.566 0 0 0 21.999 12c0-4.091-2.472-7.453-5.999-9v2c2.387 1.386 3.999 4.047 3.999 7a8.113 8.113 0 0 1-1.672 4.913l-1.285-1.285C17.644 14.536 18 13.19 18 12c0-1.771-.775-3.9-2-5v7.586l-2-2V4a1 1 0 0 0-1.554-.832L7.727 6.313l-4.02-4.02-1.414 1.414 18 18 1.414-1.414zM12 5.868v4.718L9.169 7.755 12 5.868zM4 17h2.697l5.748 3.832a1.004 1.004 0 0 0 1.027.05A1 1 0 0 0 14 20v-1.879l-2-2v2.011l-4.445-2.964c-.025-.017-.056-.02-.082-.033a.986.986 0 0 0-.382-.116C7.059 15.016 7.032 15 7 15H4V9h.879L3.102 7.223A1.995 1.995 0 0 0 2 9v6c0 1.103.897 2 2 2z"
              />
            </svg>
          </button>
          <span
            class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium e50mx223 css-hva6d7-MuiSlider-root"
          >
            <span
              class="MuiSlider-rail css-r64h58-MuiSlider-rail"
            />
            <span
              class="MuiSlider-track css-xvk2i-MuiSlider-track"
              style="left: 0%; width: 100%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="0"
              style="left: 0%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="1"
              style="left: 10%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="2"
              style="left: 20%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="3"
              style="left: 30.000000000000004%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="4"
              style="left: 40%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="5"
              style="left: 50%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="6"
              style="left: 60.00000000000001%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="7"
              style="left: 70%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="8"
              style="left: 80%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="9"
              style="left: 90%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="10"
              style="left: 100%;"
            />
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1xcmt9q-MuiSlider-thumb"
              data-index="0"
              style="left: 100%;"
            >
              <input
                aria-label="Volume Slider"
                aria-orientation="horizontal"
                aria-valuemax="1"
                aria-valuemin="0"
                aria-valuenow="1"
                data-index="0"
                max="1"
                min="0"
                step="0.1"
                style="border: 0px; clip: rect(0px); height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="1"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel css-1asissc-MuiSlider-valueLabel"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    100
                  </span>
                </span>
              </span>
            </span>
          </span>
          <button
            aria-label="Max Volume"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-dhaj44-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 24 24"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21c3.527-1.547 5.999-4.909 5.999-9S19.527 4.547 16 3v2c2.387 1.386 3.999 4.047 3.999 7S18.387 17.614 16 19v2z"
              />
              <path
                d="M16 7v10c1.225-1.1 2-3.229 2-5s-.775-3.9-2-5zM4 17h2.697l5.748 3.832a1.004 1.004 0 0 0 1.027.05A1 1 0 0 0 14 20V4a1 1 0 0 0-1.554-.832L6.697 7H4c-1.103 0-2 .897-2 2v6c0 1.103.897 2 2 2zm0-8h3c.033 0 .061-.016.093-.019a1.027 1.027 0 0 0 .38-.116c.026-.015.057-.017.082-.033L12 5.868v12.264l-4.445-2.964c-.025-.017-.056-.02-.082-.033a.986.986 0 0 0-.382-.116C7.059 15.016 7.032 15 7 15H4V9z"
              />
            </svg>
          </button>
        </div>
      </span>
    </li>
    <li
      class="css-1obf64m e50mx220"
    >
      <span
        class="css-1obf64m e50mx221"
      >
        <div
          class="css-1jdek9u e50mx222"
          id="_r_7_--fast-forward"
        >
          <button
            aria-label="Regular Speed"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-dhaj44-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 1024 1024"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M825.8 498L538.4 249.9c-10.7-9.2-26.4-.9-26.4 14v496.3c0 14.9 15.7 23.2 26.4 14L825.8 526c8.3-7.2 8.3-20.8 0-28zm-320 0L218.4 249.9c-10.7-9.2-26.4-.9-26.4 14v496.3c0 14.9 15.7 23.2 26.4 14L505.8 526c4.1-3.6 6.2-8.8 6.2-14 0-5.2-2.1-10.4-6.2-14z"
              />
            </svg>
          </button>
          <span
            class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium e50mx223 css-hva6d7-MuiSlider-root"
          >
            <span
              class="MuiSlider-rail css-r64h58-MuiSlider-rail"
            />
            <span
              class="MuiSlider-track css-xvk2i-MuiSlider-track"
              style="left: 0%; width: 0%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
              data-index="0"
              style="left: 0%;"
            />
            <span
              class="MuiSlider-mark css-lq5hqx-MuiSlider-mark"
              data-index="1"
              style="left: 25%;"
            />
            <span
              class="MuiSlider-mark css-lq5hqx-MuiSlider-mark"
              data-index="2"
              style="left: 50%;"
            />
            <span
              class="MuiSlider-mark css-lq5hqx-MuiSlider-mark"
              data-index="3"
              style="left: 75%;"
            />
            <span
              class="MuiSlider-mark css-lq5hqx-MuiSlider-mark"
              data-index="4"
              style="left: 100%;"
            />
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1xcmt9q-MuiSlider-thumb"
              data-index="0"
              style="left: 0%;"
            >
              <input
                aria-label="Fast Forward Slider"
                aria-orientation="horizontal"
                aria-valuemax="5"
                aria-valuemin="1"
                aria-valuenow="1"
                data-index="0"
                max="5"
                min="1"
                step="1"
                style="border: 0px; clip: rect(0px); height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="1"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel css-1asissc-MuiSlider-valueLabel"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    x1
                  </span>
                </span>
              </span>
            </span>
          </span>
          <button
            aria-label="Max Fast Forward"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-dhaj44-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 1024 1024"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M793.8 499.3L506.4 273.5c-10.7-8.4-26.4-.8-26.4 12.7v451.6c0 13.5 15.7 21.1 26.4 12.7l287.4-225.8a16.14 16.14 0 0 0 0-25.4zm-320 0L186.4 273.5c-10.7-8.4-26.4-.8-26.4 12.7v451.5c0 13.5 15.7 21.1 26.4 12.7l287.4-225.8c4.1-3.2 6.2-8 6.2-12.7 0-4.6-2.1-9.4-6.2-12.6zM857.6 248h-51.2c-3.5 0-6.4 2.7-6.4 6v516c0 3.3 2.9 6 6.4 6h51.2c3.5 0 6.4-2.7 6.4-6V254c0-3.3-2.9-6-6.4-6z"
              />
            </svg>
          </button>
        </div>
      </span>
    </li>
  </ul>
  <div />
</div>
`;
